Subject: Addding unit test cases changes:  - unit teat cases  - readme file
Signed-off-by: shyluthomas <shylupthomas@gmail.com>

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -8,16 +8,22 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
     "@types/helmet": "^4.0.0",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.16",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
     "prettier": "^2.8.8",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3"
   },
   "scripts": {
     "start": "nodemon",
-    "pretify": "npx prettier --write ."
+    "pretify": "npx prettier --write .",
+    "test": "jest --watchAll --coverage"
   },
   "dependencies": {
     "@types/body-parser": "^1.19.5",
