--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -43,6 +43,7 @@
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "vite-tsconfig-paths": "^4.3.1",
     "yup": "^1.3.3"
   },
   "devDependencies": {
@@ -55,6 +56,7 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/ui": "^1.3.1",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
